deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app-name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-app-name
  template:
    metadata:
      labels:
        app: example-app-name
    spec:
      containers:
        - name: main # any name you want
          image: nginx
          imagePullPolicy: IfNotPresent
          args:
            - nginx
            - -g
            - $(CMD_ENV) # 这里的$(CMD_ENV)会被k8s替换成环境变量的值, 如果使用了shell也可以使用${CMD_ENV}
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
          volumeMounts:
            - name: example-volume
              mountPath: /data
            - name: log-volume
              mountPath: /var/log/nginx
            - name: site-config
              mountPath: /etc/nginx/conf.d/
          # 按需配置探针,保障服务的可用性
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 6
            timeoutSeconds: 5
            initialDelaySeconds: 0 # startup 后 0秒后开始探测
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 300
            successThreshold: 1
            failureThreshold: 24 # 持续1个小时不响应就干掉
            timeoutSeconds: 10
            initialDelaySeconds: 0
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 3
            failureThreshold: 20 # 1分钟启动不起来就有问题
            timeoutSeconds: 5
        - name: errlog
          image: busybox:stable
          args:
            - "tail"
            - -n+1
            - -F
            - /log/error.log
          volumeMounts:
            - name: log-volume
              mountPath: /log
      volumes:
        - name: example-volume
          persistentVolumeClaim:
            claimName: example-pvc
        - name: log-volume
          emptyDir: {}
        - name: site-config
          configMap:
            name: site-config
      # if you need to pull images from a private registry, uncomment the following lines
      # imagePullSecrets:
      #   - name: docker-registry-pull
  revisionHistoryLimit: 2
