service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
  labels:
    prom-metric-class: normal-metrics
spec:
  selector:
    app: example-app-name
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http # or 8080, can be different from the port and should be the same as the port in pod containerPort
    - name: metrics
      protocol: TCP
      port: 9090
      targetPort: metrics
